@@ -17,14 +17,24 @@ DIST numpy-html-1.7.0.zip 10831068 SHA256 469a8e6f21544204b6e338eb88519c04ed22a6
 DIST numpy-ref-1.7.0.pdf 5161456 SHA256 0581709ef96441953404bc1369d70117b83359aff94f44779b960bed30a156d7 SHA512 9a80ab2b412aa34ce019454c438b129d1e94b2264306f3644e97c87f4f7b54317ee626274d865c04891005ca8e8f5e3773681a7af590dd89d64df9462d0f0004 WHIRLPOOL 0f10177fd24cfe93555f28440ddc3567a787f2cef336b2f2774b038caafb6807f738d1f3ee3d5a5f26883c567e4017f8365069f25ec7cba5234c537602351729
 DIST numpy-user-1.7.0.pdf 404104 SHA256 0c8dc1d53cc057a66139039dbaaf65499687cf64e72af5852eb96d9c3cd3ab18 SHA512 20cec2f9742c0604d9db9f2e74e7c8fda1782c081c27437a07c2d8cb7f36be6df3e50e5ddf8cc10a076905b2be2b6927af15d0574e3bee2961cf14aaca55ad78 WHIRLPOOL 792c4ccd155ddbb82d8a93959c218bcc001532a6b3c42626bef64c96eb865601f5ee328d1a1627f1656e0b22085c89ede39d7f94183841e1069d183589542ffe
 EBUILD numpy-1.6.2-r2.ebuild 4041 SHA256 a19790520f8f2e72424a19fcfb0eb6e6b92f824c65e5d0e0c4186c3623d4468c SHA512 63ebe9d2113905b9da0f567d29a607106ea34bd5bece980684be2cd4e7963af67c33d5e96be210fc5c2befbfcdc2e99358940e05b1c558ca068d6e5b41d5c2e9 WHIRLPOOL 188c736341018499da86161ac3f4dad5bd3387c385dd1fa5b27fd0b465f1ce8335079a305ce93932616bb41f1172721d9d97a7e2cab79cc2c7519cdec6774a7f
-EBUILD numpy-1.7.1.ebuild 4023 SHA256 5db01ac368b05397f0f0ad1a6c808acb03f59aeefdae074971481e52f6a6abd3 SHA512 f6aeeea768f022449d9de05cb4cea35a9975997e9cf2ddec0077c96e2937dac35f28a08eabba7b7aa2d15004f120a10169ed35454096d841e335485443651d0b WHIRLPOOL 1429085af817221d3ffda8594fc46c944dc0b49d8e0fcab5096ba026142ea5e2274ca6db1b061b94938790713112ac58ebdaa01c1a5472de5b3c3882377122f4
+EBUILD numpy-1.7.1.ebuild 4018 SHA256 afe943943bb1ff676ad0f2846882f8bca40aa24da5d678464b9973e0f2445b4f SHA512 283b93fb9ee81c441601770b68080b35665f233d835342fcf59205dec18dd3b498403e8006b396ac44f8cb2046a33ece221c2a628d442b57dbe2ec9181eaa4c1 WHIRLPOOL 57e2c6f2edbb8b3603558b540799a58f40eb7143e1f5ff63cce485d3457c25b3ef277d46eac2f8cf1dc260dc9bf7ba258ccb5a4c19023ef449a48786522b2eb4
 EBUILD numpy-1.8.0.ebuild 3961 SHA256 827ee876840c39b753b251c246e7a1815f2207cfd36eb777bd3119c80201218c SHA512 32aa5326410c13175f725f704e0bf60d04a7e190f72683e1e37b9320cff874c9556d81020240844b8bf5b849201f37d796a666bb1c6d45ed05316a7eef81b635 WHIRLPOOL 575356d1a0bfcd9215ba6187c4cd4b8c2d445bdf23daf4b2e018f965daac5b8178dc6650ae2f3d6b37e2c63bf0720784fa507624e380e96159ef9efb2ef11b59
-MISC ChangeLog 29501 SHA256 37adff24b8fffee7efcfd33d983a86abfc5ec0443192e2a58eb0c5842a529c6a SHA512 030c74d8ebc2460388f6328992d6f24a46b5e27bdaf4fc4aba15027dc28cd5107bfafa9eb9434a4e0b6c4ecab9720d060563514e4c5caf209e36bcf6d45d1381 WHIRLPOOL ab0ad785bbf6dc4f2611cba1638ee570a25822f4518095d21a70165434ab770eaf13ca8206893cf02228cf94ff511e89e5bff7c64a40fcec2608a1693c10b32b
+MISC ChangeLog 29592 SHA256 a8c6928cf77512ffc738542a56cbd978f5d5b8d42d87bea48d1f21c7059f6c72 SHA512 18f70252ace84933621d8fe02c3a75bac769a1dba25c8cec528b80cac23924083496ba9bdfdf402da14358a0a3eedaf6a25215931a8825b10657d6b07f25ce7a WHIRLPOOL 0d514b31761536d141820df59c879a62ef37d00578e7c57d56b139e252f9e7366320fea78280073d6d1919a6c1201c60b063082e9e8a27411e34ef5d3110d1f2
 MISC metadata.xml 678 SHA256 184af17845835a595a8b2ee396a6f55baa7234a7b91ebddcf957a5d69c0b01d0 SHA512 6dbcd40d6722b481caf27183618012f3df43fd6fc22f8ddd6f1a3e9e42bc1240f56573616ef32fe8c3ea52addc42172940b3d7c5fa0938b854baeb96daa53d88 WHIRLPOOL e9b5f50c2b2d34745b255d05f65c6762c34fe34a2f097633621479ce909a1e120322cbcd0ded383fae6511240a14a7e9db4f47592715e2919d1c4d615f9bd24d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKUJGEACgkQ1ycZbhPLE2DZ/gCeIb53tXuMDxljMF3KkH9ZbGmm
-uXwAn313QKb6Dp4jMpP2w5Iuva7Uo13g
-=CJZL
+iQIcBAEBCAAGBQJSnPZoAAoJEGVpnaTzz9K9qmkP/1LVBjmWhhX75OCa0SmHPwHg
+GaqIkyFJGF4ttt0XLfaCsFGn+uNTxlwRyaLF2Sef2zN+Lj9V0iafjiWhfZNxWFFw
+3G5GdBi0mBkf8RV09gkvqtWp11kFDu6cXTpgN3UxlvyF5JbEAobUpj0uUHajVop+
+yYd00RyyZOKRS6Xs4ssCPQ9pV3kNR1G9vHgwIt3ZfiuCJZkM41nhQJZ2UdIM6YJ/
+RlfrpUKHus+2+oKr9gBDQuZm183Asdq9Zf393880RsAETx37eUGHXUv/b6ARQEHf
+5SKSGSkEASQ4kcMun9EU/kCPEY5+KdsgzIupt9Ei8BS+aQl6nqbsU2voFN0k4OaT
+1MnZgLZjvReaQiJLDPr91jAPTuD+fhknMEulrfYuxOH20d0rqyNh4x0emCYTNupZ
+PEEGNAnLAkI4m6NmLM3h7lV8uSOg80avzeOINdmZj4jVnLo2DYOlc/mz+4uKlj8g
+tNnFqs2qMRGLDCpKwY9s7kRRNXiZb6B/ismbIAbjpEWcqfb5C2WoaLq3DOfYtlPn
+LmbOcxiHNRYUnAsFmyWre7N+srPTHLyZah9zH9bPx/pLnNjGz9wSBdDfx0O9jTkv
+oXUXphl75kqrs0SZ5DKo6+MkMEVs1nDf1Wd5eVq59uUrrNXl96G+87tUkdq6Y2Df
+XQ84eMXsblwB2ZKntVAS
+=t2yr
 -----END PGP SIGNATURE-----
