@@ -1,7 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX postinstall-en.txt 507 SHA256 75a4c64f7bcfe2594299aac7cb868b2aff740579b9dee076c8b04ff8e2988d0f SHA512 dc54de4de270eacd4ef765ad1537333229a6acbf6495f88f6c6a7f555fcf643177f03f690c426f08eea63a4988d113b39fb519162b26c6200b14ee387f1ebed0 WHIRLPOOL d688107ff8b43e17c7978fc4cbea6ab9a0bb037a16830a384033cb8e5db87ce86f15023499ff0544fdeb76dd3cc089222d2660cd225031d0bfaf898e0e6059dd
 DIST phpBB-3.0.10.tar.bz2 1576431 SHA256 6060dde45558a786dfb8c3787996f8760426b30e3d07a1180c195229ccc6bc96
 DIST phpBB-3.0.11.tar.bz2 1589870 SHA256 b8c40b8cad58a458442bf04cb2632e350a76e7fb688e2820f8afd92887e751f2 SHA512 54ad6c1f673c522a7e7e651eb878942c0c947f9a9096b9eb82483df00aaf7b65e98d4c441c081c05c99d4bec8f5086bd9807c3f3860e3b0ea727d55d47ed6d4c WHIRLPOOL 801efd14407bf1d58a41fb7bad1da7936d696ec86026440baaf35acf7b7d88a6e7e5fdf23e67a86b2373fc5807d541df3c7702c13e17fff9bb81cd873221dc94
+DIST phpBB-3.0.12.tar.bz2 1600626 SHA256 14f216807063017a0110c6b36f1e4c0131e0ba4c42322ec6be77392059a197a8 SHA512 d1992afcd1b107a320c6c1421917d1b25ddd6ec33784749d78ca3ebea38cf786e91e96495cb47f0389d0f6d4c721f146c8e394826e2d01ebc29f0d3534620153 WHIRLPOOL 7a9a78e5b09106da5673f180908b93e331ed9789ef68b7785fcd3b4e23683941c54b7ff6e15f6887a73e931454264c5d70336c8f0cbdf09919eb2adea8ce7e44
 EBUILD phpBB-3.0.10.ebuild 1019 SHA256 7bf355926a6d57bbe90afaea223fb5868f928dffae19bf40bc52c739db68e064 SHA512 aa6f4563349a1a23e18bc4181a0ffa468b0a4e370d26ca9887ee26186bf33e391a9763f4c2c225427f884ceb6ea13e74fae52161069eea2e3824c453134ec670 WHIRLPOOL 05b90b2a99a3067efb601c5da9cba0a27a3391e001f589131ba647fc7f1e88c5c9b6a543f6958e471bacd642d4cd9b6507f1730f62c7c394e27df6a4574e3192
 EBUILD phpBB-3.0.11.ebuild 1016 SHA256 ae30695df88dde543e3196437697a92348db1d4e1a7640f8c6c5be363d6b2a4d SHA512 2b7b1fc27bf377979c80e6fda6207950b6c221f8ca31081a0ec79c211d52b530d4fc9a3f731bdc82495eeedb868fe5832225b5f3d836480cefd5a8e416dd0b50 WHIRLPOOL f2c604bb0b679c8a2a31cd596029f97df1bbf039121186094fddf3d94392e0e894f663f0d3483938c189b46c67422ee60efbbd8c626b1781131f148eabfa1385
-MISC ChangeLog 8854 SHA256 1d7758b75c819ce900e2b98a35738f2465077fd5010907d879f198f49f4a26d0 SHA512 6658539f320dbfab709ee0842910f20e373fbe98d9227048748bfd7c13fad52c49488bb0f3bc8ffd71b00779462c7aebbc680d7f7983e81cbd9c38c76596d8d4 WHIRLPOOL 028698b75fa032c97ea2ad90acf8ac27cc44363d76a3aa3b51b252b9c43932fbbfe18269348f53e50b60699f3dee3b8d191335e4bacbe4c083c1e41b4224f7f1
+EBUILD phpBB-3.0.12.ebuild 1016 SHA256 5310c824cd875463187ff9602e47e90981857ccc90f6a45adb3d26f1200db980 SHA512 76ff0062be948860e6dc7223ce8610d06e4bec408da12992a6c8eb85048e7dc20976717b85cdfd7d2cb32a4ba6aa934977d76faa04f8420ed6c18ab1d1ced73c WHIRLPOOL cc59ec213901846d7e8f7f24e1be22eae5790617acb324ef88455aef7f7d33d5edcaa77f1216a013388ccd6de3be1716bc85049be16cb204740b9a4ad3c60eb8
+MISC ChangeLog 8991 SHA256 790071fa484315277600b807735cc126e927347e1050fbbcb7a0821346504b38 SHA512 a4f0d7773fd28c013e0f9393f06e9848b0b07535ca2d1ba3003afbb15c9ee2f875043e6f4ca4493a4b6e827bbd1bdf5b3c26ce9375955331507109ea10950fea WHIRLPOOL 7d5c2ed04f21b9d0620f61d89077ddd830f573d47c66de96cb8fc2a07ac329e4903b913b9489f3438a7f932f9c064c66fc79718fdb4d804b22e48e1d5a8fd403
 MISC metadata.xml 162 SHA256 84ff2fc6c9a4af1b9dbe32aa81ab84c2958bc1bd65a9977686df2dcab6e420d0 SHA512 550d0f517601255e5c9b120a03f1dad37a1a75bdaadad486ddbd2380a7f0dd884970400574455d34d3ba6e800d9fd21467dfb7f89ba27a0aa8a65e7a265534e3 WHIRLPOOL d50adcb067d0290aa7dfe5aebd0e8abf4939ece7afbf284920d08f2bf04f9306f0062a78cacb7572a12735ac41545440fcf138beda81cc53774950bdde495dcb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQEcBAEBCAAGBQJSnPdKAAoJEEqz6FtPBkyjBVYH/jikMRH0ttj04yefUiyCDbYx
+Zt5T+yg4K6QBFy5yAkEqtaqArsAOegobtRT1qBKAxdeUDdlpgCBBeqk0MsYR8BmS
+YaeqqhB2qhoRTHRa+iOR79aCIBQq/3e3oy1Y3M4Kcb6YiNic0L30on6VTUxX9sv0
+nh2ztVC+Ft4mjYU83SxBP9wuNO3wVFC6jzDDc8vpgKWVRrpHpTaEONNfv42/4t7s
+jaf+I6S++mvD0r4pHuBc+5KUUaQs3Ts+tTJ/TUrNo+/JbxfTbm/C1I1Wa2GmXjQo
+J6Cvz4hO4rDpbt68D8+5WFinY8dKVrvJ8xCYTLy90qkKEYJWvhK+lUOzPhpEh3c=
+=leui
+-----END PGP SIGNATURE-----
