@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/phpBB
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/phpBB/ChangeLog,v 1.47 2012/12/16 13:53:11 ago Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apps/phpBB/ChangeLog,v 1.48 2013/12/02 21:10:31 radhermit Exp $
+
+*phpBB-3.0.12 (02 Dec 2013)
+
+  02 Dec 2013; Tim Harder <radhermit@gentoo.org> +phpBB-3.0.12.ebuild:
+  Version bump (bug #487586).
 
   16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> phpBB-3.0.11.ebuild:
   Stable for x86, wrt bug #441542
