@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/mako
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/mako/ChangeLog,v 1.75 2013/11/16 09:47:12 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/mako/ChangeLog,v 1.76 2013/12/02 21:28:42 johu Exp $
+
+  02 Dec 2013; Johannes Huber <johu@gentoo.org> mako-0.7.3-r2.ebuild:
+  x86 stable, bug #489894
 
   16 Nov 2013; Pacho Ramos <pacho@gentoo.org> mako-0.7.3-r2.ebuild:
   amd64 stable, bug #489894
